nginx_plain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx
#spec:
#  ports:
#  - name: http
#    port: 80
#    protocol: TCP
#    targetPort: 80
#  selector:
#    app: nginx
#  type: LoadBalancer
