ingress-resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: 
    kubernetes.io/ingress.class: nginx
    # For Path base uncomment 
    # nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-ingress
spec:
  rules:
  - host: wordpress.salvador.org
    http:
      paths:
      - backend: 
          serviceName: wordpress
          servicePort: 80
  - host: ghost.salvador.org
    http:
     paths:
     - backend:
         serviceName: ghost
         servicePort: 80
