ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  tls:
  - hosts:
    - salvador.org
  rules:
  - host: salvador.org
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
      - path: /ghost
        backend:
          serviceName: ghost
          servicePort: 80
